multicontainer-demo/deploy/mysql-svc.yaml
kind: Service
apiVersion: v1
metadata: 
  name: mysql
  labels:
    app: mysql
    lab: kubernetes-lab
spec: 
  ports:
    # the port that this service should serve on
    - port: 3306
  # label keys and values that must match in order to receive traffic for this service
  selector: 
    app: mysql
