multicontainer-demo/deploy/web1-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web1-svc
  labels:
    app: web1
    lab: kubernetes-lab
spec:
  selector:
    app: web1
  type: NodePort
  ports:
   - port: 80
     name: http-80
     targetPort: 8001
