multicontainer-demo/deploy/web2-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: web2-svc
  labels:
    app: web2
    lab: kubernetes-lab
spec:
  selector:
    app: web2
  type: NodePort
  ports:
   - port: 80
     name: http-80
     targetPort: 8001
